# firecracker

./: 0001-seccomp-filter-forgot-KVM_SET_DEBUGREGS-ioctl.patch  CHANGELOG.md
api_server/src/: http_service.rs
devices/src/virtio/: balloon.rs  mod.rs
devices/src/virtio/vhost/: handle.rs  mod.rs
jailer/src/: env.rs  lib.rs
logger/src/: lib.rs
memory_model/src/: guest_memory.rs  mmap.rs
mmds/src/: lib.rs
rate_limiter/src/: lib.rs
src/api_server/src/: parsed_request.rs
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/x86_64/: mod.rs
src/devices/src/virtio/block/: device.rs
src/devices/src/virtio/net/: device.rs
src/logger/src/: metrics.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  controller.rs  lib.rs  resources.rs  rpc_interface.rs  vstate.rs
src/vmm/src/default_syscalls/: mod.rs
src/vmm/src/device_manager/: mmio.rs
src/vmm/src/vmm_config/: boot_source.rs
tests/integration_tests/functional/: test_rate_limiter.py
virtio_gen/src/: lib.rs
vmm/src/: lib.rs
vmm/src/default_syscalls/: x86_64.rs
